font-size 30px; from  flex-container taken off - avoid x-overflow - changed

--- a/style.css
+++ b/style.css
@@ -309,7 +309,6 @@ nav ul li a:hover {
 .flex-container {
   display: flex;
   flex-wrap: wrap;
-  font-size: 30px;
   text-align: center;
 }
 
